2005-04-23  Naba Kumar  <naba@gnome.org>

	* plugins/terminal/terminal.c: Fixed crash on termial docking.

2005-04-22  Naba Kumar  <naba@gnome.org>

	* plugins/project-wizard/templates/java-logo.png: Smaller icons.
	
	* plugins/project-wizard/templates/java.wiz,
	plugins/project-wizard/templates/java/src/Makefile.am.tpl: Add option
	to create bytecodes (.class) files.
	
	* plugins/symbol-browser/an_symbol_info.c,
	plugins/symbol-browser/an_symbol_info.h,
	plugins/symbol-browser/an_symbol_search.c,
	plugins/symbol-browser/an_symbol_view.c,
	plugins/symbol-browser/plugin.c,
	tagmanager/tm_workspace.c: Fixed java symbols view. Fixed icon types
	in file symbol list.

2005-04-22  Naba Kumar  <naba@gnome.org>

	* TODO.tasks: Updated.
	
	* plugins/class-inheritance/Makefile.am,
	plugins/subversion/Makefile.am: Do not install plugin files when
	plugin build condition is false.
	
	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin.ui,
	plugins/build-basic-autotools/build-basic-autotools.c,
	plugins/build-basic-autotools/build-basic-autotools.h,
	plugins/file-loader/anjuta-loader-plugin.ui,
	plugins/file-loader/dnd.c,
	plugins/file-loader/plugin.c,
	plugins/file-loader/plugin.h,
	plugins/project-manager/anjuta-project-manager.ui,
	plugins/project-manager/plugin.c: Added open file and build context
	menu in project manager context menu.

2005-04-22  Naba Kumar  <naba@gnome.org>

	* configure.in: Added message output showing conditional plugins to
	build or not.
	
	* src/layout.xml: Added layout for class-inheritance plugin widget.
	
	* plugins/class-inheritance/anjuta-class-inheritance.plugin.in: Fixed
	plugin name to remove redundant terms.
	
	* TODO.tasks: Updated.
	
	* configure.in,
	plugins/symbol-browser/Makefile.am,
	plugins/symbol-browser/an_symbol_view.c,
	(removed) plugins/symbol-browser/sv_class.xpm,
	(removed) plugins/symbol-browser/sv_function.xpm,
	(removed) plugins/symbol-browser/sv_macro.xpm,